--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@
 name: Release
 permissions:
     'contents': 'write'
+    'id-token': 'write'
 
 # This task will run whenever you push a git tag that looks like a version
 # like "1.0.0", "v0.1.0-prerelease.1", "my-app/0.1.0", "releases/v1.0.0", etc.
@@ -280,8 +281,6 @@ jobs:
             - plan
             - host
         runs-on: 'ubuntu-22.04'
-        permissions:
-            id-token: write
         env:
             GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
             PLAN: ${{ needs.plan.outputs.val }}
@@ -295,13 +294,18 @@ jobs:
                   merge-multiple: true
             - uses: actions/setup-node@v4
               with:
-                  node-version: '20.x'
+                  node-version: '22.x'
                   registry-url: 'https://registry.npmjs.org'
+            - name: Ensure modern npm (OIDC support)
+              run: npm install -g npm@11.6.4
             - run: |
                   for release in $(echo "$PLAN" | jq --compact-output '.releases[] | select([.artifacts[] | endswith("-npm-package.tar.gz")] | any)'); do
                     pkg=$(echo "$release" | jq '.artifacts[] | select(endswith("-npm-package.tar.gz"))' --raw-output)
                     npm publish --access public "./npm/${pkg}"
                   done
+              env:
+                  NPM_CONFIG_PROVENANCE: true
+                  NODE_AUTH_TOKEN: ''
 
     announce:
         needs:
