--- a/.github/workflows/ci-frontend.yml
+++ b/.github/workflows/ci-frontend.yml
@@ -56,6 +56,8 @@ jobs:
                         - stylelint*
                         - '**/*.md'
                         - '**/*.mdx'
+                        - '**/*.yaml'
+                        - '**/*.yml'
                         - .config/.markdownlint-cli2.jsonc
 
     frontend-format:
@@ -102,6 +104,9 @@ jobs:
 
             - name: Check markdown formatting with prettier
               run: pnpm exec prettier --check "**/*.{md,mdx}"
+
+            - name: Check YAML formatting with prettier
+              run: pnpm exec prettier --check "**/*.{yaml,yml}" --ignore-path .prettierignore
 
             - name: Lint markdown files
               run: pnpm exec markdownlint-cli2 --config .config/.markdownlint-cli2.jsonc "**/*.{md,mdx}"
