TEMP: add feature branch to Rust CI for smoke testing in mirror

--- a/.github/workflows/rust-docker-build.yml
+++ b/.github/workflows/rust-docker-build.yml
@@ -8,6 +8,7 @@ on:
             - '.github/workflows/rust-docker-build.yml'
         branches:
             - 'master'
+            - 'eli.r/capture-hyper-server-1'
 
 jobs:
     build:
