--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -494,13 +494,22 @@ services:
             - /bin/sh
             - -c
             - |
-                (
-                    until echo "s3.bucket.create -name posthog" | /usr/bin/weed shell -master=localhost:9333 2>/dev/null; do
-                        sleep 5
-                    done
-                    echo "Created bucket: posthog"
-                ) &
-                exec /usr/bin/weed "$$@"
+                /usr/bin/weed "$$@" &
+                WEED_PID=$$!
+                echo "Waiting for SeaweedFS to initialize..."
+                while true; do
+                    sleep 5
+                    echo "Checking if posthog bucket exists..."
+                    if echo "s3.bucket.list" | /usr/bin/weed shell -master=localhost:9333 2>&1 | grep -q "posthog"; then
+                        echo "Bucket posthog exists!"
+                        break
+                    fi
+                    echo "Bucket not found, attempting to create..."
+                    echo "s3.bucket.create -name posthog" | /usr/bin/weed shell -master=localhost:9333 2>&1 || true
+                    echo "Retrying in 5s..."
+                done
+                echo "SeaweedFS ready with posthog bucket"
+                wait $$WEED_PID
             - --
         command: ['server', '-s3', '-s3.port=8333', '-dir=/data']
 
