--- a/common/hogli/manifest.yaml
+++ b/common/hogli/manifest.yaml
@@ -276,6 +276,22 @@ build:
             - build:schema-python
             - build:schema-latest-versions
         description: Generate all schema definitions (frontend JSON, Python, latest versions)
+    build:openapi-schema:
+        cmd: |
+            DEBUG=1 OPENAPI_INCLUDE_INTERNAL=1 python manage.py spectacular --file frontend/tmp/openapi.json --format openapi-json && echo "OpenAPI schema written to frontend/tmp/openapi.json"
+        description: Generate OpenAPI schema from Django backend (writes to gitignored temp location)
+        services:
+            - postgresql
+            - clickhouse
+            - django
+    build:openapi-types:
+        cmd: pnpm --filter=@posthog/frontend run openapi:types
+        description: Generate TypeScript API types from the backend OpenAPI schema
+    build:openapi:
+        steps:
+            - build:openapi-schema
+            - build:openapi-types
+        description: Generate OpenAPI schema and TypeScript types from the backend
     build:grammar:
         cmd: pnpm grammar:build
         description: Generate HogQL grammar definitions (Python and C++)
