--- a/.github/workflows/ci-hobby.yml
+++ b/.github/workflows/ci-hobby.yml
@@ -214,17 +214,14 @@ jobs:
                   # Use docker to clean up files created by containers
                   [ -d "data" ] && docker run --rm -v "$(pwd)/data:/data" alpine sh -c "rm -rf /data/seaweedfs /data/minio" || true
               continue-on-error: true
-            - uses: actions/setup-python@v5
-              with:
-                  python-version: '3.8'
-            - name: Get python deps
-              run: pip install python-digitalocean==1.17.0 requests==2.28.1 paramiko
+            - name: Install uv
+              uses: astral-sh/setup-uv@681c641aba71e4a1c380be3ab5e12ad51f415867
             - name: Set environment variables from previous job
               run: |
                   echo "PREVIEW_MODE=${{ github.event_name == 'pull_request' && needs.wait-for-docker-image.outputs.preview-mode || 'false' }}" >> $GITHUB_ENV
                   echo "HOBBY_COMMENT_ID=${{ needs.wait-for-docker-image.outputs.comment-id }}" >> $GITHUB_ENV
             - name: Setup DO Hobby Instance
-              run: python3 bin/hobby-ci.py create "$GITHUB_HEAD_REF" "${{ github.run_id }}-${{ github.run_attempt }}" "${{ github.sha }}" "${{ github.event.pull_request.number || 'unknown' }}" 2>&1 | tee /tmp/hobby-ci-output.txt
+              run: uv run bin/hobby-ci.py create "$GITHUB_HEAD_REF" "${{ github.run_id }}-${{ github.run_attempt }}" "${{ github.sha }}" "${{ github.event.pull_request.number || 'unknown' }}" 2>&1 | tee /tmp/hobby-ci-output.txt
               env:
                   DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
                   DIGITALOCEAN_SSH_PRIVATE_KEY: ${{ secrets.DO_DEPLOY_SSH_PRIVATE_KEY }}
@@ -317,7 +314,7 @@ jobs:
               timeout-minutes: 30
               run: |
                   set +e
-                  python3 bin/hobby-ci.py test
+                  uv run bin/hobby-ci.py test
                   echo "TEST_EXIT_CODE=$?" >> $GITHUB_ENV
                   exit 0
               env:
@@ -325,7 +322,7 @@ jobs:
             - name: Generate demo data
               if: env.TEST_EXIT_CODE == '0' && env.PREVIEW_MODE == 'true' && env.HOBBY_DROPLET_NEW == 'true'
               timeout-minutes: 15
-              run: python3 bin/hobby-ci.py generate-demo-data
+              run: uv run bin/hobby-ci.py generate-demo-data
               env:
                   DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
                   DIGITALOCEAN_SSH_PRIVATE_KEY: ${{ secrets.DO_DEPLOY_SSH_PRIVATE_KEY }}
@@ -493,7 +490,7 @@ jobs:
                       console.log(`Updated deployment ${deploymentId} to ${state}`);
             - name: Fetch logs after test
               if: always()
-              run: python3 bin/hobby-ci.py fetch-logs || echo "Could not fetch logs"
+              run: uv run bin/hobby-ci.py fetch-logs || echo "Could not fetch logs"
               env:
                   DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
                   DIGITALOCEAN_SSH_PRIVATE_KEY: ${{ secrets.DO_DEPLOY_SSH_PRIVATE_KEY }}
@@ -512,7 +509,7 @@ jobs:
                   if-no-files-found: warn
             - name: Post-cleanup step
               if: always() && env.PREVIEW_MODE == 'false'
-              run: python3 bin/hobby-ci.py destroy
+              run: uv run bin/hobby-ci.py destroy
               env:
                   DIGITALOCEAN_TOKEN: ${{ secrets.DIGITAL_OCEAN_HOBBY_TOKEN }}
             - name: Check test result
