feat(bazel): add Bazel infrastructure for isolated product testing
Add target-determinator based test selection to CI. When only isolated
products change, skip legacy pytest (40 jobs). When legacy code changes,
run everything.

Key components:
- //posthog:core and //posthog:legacy_srcs for core dependency tracking
- //products:non_isolated catchall for legacy products
- //ci:legacy_pytest marker target for target-determinator
- ISOLATED_PRODUCTS list in products/BUILD.bazel (auto-excludes from legacy)
- hogli product:bootstrap auto-adds to ISOLATED_PRODUCTS
- bazel-coordinator job in ci-backend.yml

visual_review product set up as first isolated product POC.

--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,10 @@ CODE_REVIEW.md
 CODE_DEBUGGING_SESSION.md
 
 data/seaweedfs
+
+# Bazel output directories
+bazel-bin
+bazel-out
+bazel-testlogs
+bazel-*
+MODULE.bazel.lock
