--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -112,6 +112,169 @@ jobs:
                       tasks_temporal:
                         - 'products/tasks/backend/temporal/**/*'
 
+    # Lightweight coordinator job that uses target-determinator to decide what runs
+    # This is the single source of truth for test selection
+    bazel-coordinator:
+        needs: changes
+        if: needs.changes.outputs.backend == 'true'
+        runs-on: ubuntu-latest
+        timeout-minutes: 5
+        name: Determine affected targets
+        outputs:
+            run_legacy: ${{ steps.determine.outputs.run_legacy }}
+            bazel_targets: ${{ steps.determine.outputs.bazel_targets }}
+            has_bazel_targets: ${{ steps.determine.outputs.has_bazel_targets }}
+        steps:
+            - uses: actions/checkout@v4
+              with:
+                  fetch-depth: 0
+
+            - name: Check for bazelified products
+              id: check-bazel
+              run: |
+                  if ls products/*/backend/BUILD.bazel 1>/dev/null 2>&1; then
+                    echo "has_products=true" >> $GITHUB_OUTPUT
+                  else
+                    echo "has_products=false" >> $GITHUB_OUTPUT
+                    echo "No bazelified products - legacy pytest will run"
+                  fi
+
+            - name: Install Bazelisk
+              if: steps.check-bazel.outputs.has_products == 'true'
+              run: |
+                  curl -LO https://github.com/bazelbuild/bazelisk/releases/download/v1.20.0/bazelisk-linux-amd64
+                  chmod +x bazelisk-linux-amd64
+                  sudo mv bazelisk-linux-amd64 /usr/local/bin/bazel
+
+            - name: Install target-determinator
+              if: steps.check-bazel.outputs.has_products == 'true' && github.event_name == 'pull_request'
+              run: |
+                  curl -LO https://github.com/bazel-contrib/target-determinator/releases/download/v0.31.0/target-determinator-linux-amd64
+                  chmod +x target-determinator-linux-amd64
+                  sudo mv target-determinator-linux-amd64 /usr/local/bin/target-determinator
+
+            - name: Determine affected targets
+              id: determine
+              run: |
+                  # If no bazelified products, always run legacy
+                  if [[ "${{ steps.check-bazel.outputs.has_products }}" != "true" ]]; then
+                    echo "run_legacy=true" >> $GITHUB_OUTPUT
+                    echo "bazel_targets=" >> $GITHUB_OUTPUT
+                    echo "has_bazel_targets=false" >> $GITHUB_OUTPUT
+                    exit 0
+                  fi
+
+                  # For pushes to master, run everything
+                  if [[ "${{ github.event_name }}" != "pull_request" ]]; then
+                    echo "Push to master - running all tests"
+                    echo "run_legacy=true" >> $GITHUB_OUTPUT
+                    echo "bazel_targets=//products/..." >> $GITHUB_OUTPUT
+                    echo "has_bazel_targets=true" >> $GITHUB_OUTPUT
+                    exit 0
+                  fi
+
+                  # For PRs, use target-determinator
+                  git fetch origin ${{ github.base_ref }}
+                  TARGETS=$(target-determinator -before=origin/${{ github.base_ref }} //... 2>/dev/null || echo "FALLBACK")
+
+                  if [[ "$TARGETS" == "FALLBACK" ]]; then
+                    echo "target-determinator failed, falling back to run all"
+                    echo "run_legacy=true" >> $GITHUB_OUTPUT
+                    echo "bazel_targets=//products/..." >> $GITHUB_OUTPUT
+                    echo "has_bazel_targets=true" >> $GITHUB_OUTPUT
+                    exit 0
+                  fi
+
+                  echo "Affected targets:"
+                  echo "$TARGETS"
+
+                  # Check if legacy pytest needs to run (//ci:legacy_pytest is in output)
+                  if echo "$TARGETS" | grep -q "//ci:legacy_pytest"; then
+                    echo "run_legacy=true" >> $GITHUB_OUTPUT
+                    echo "Legacy code changed - pytest will run"
+                  else
+                    echo "run_legacy=false" >> $GITHUB_OUTPUT
+                    echo "No legacy changes - skipping pytest"
+                  fi
+
+                  # Extract bazel test targets (excluding the legacy_pytest marker)
+                  TEST_TARGETS=$(echo "$TARGETS" | tr ' ' '\n' | grep -E ':tests_' | grep -v legacy_pytest | tr '\n' ' ' || true)
+                  if [[ -n "$TEST_TARGETS" ]]; then
+                    echo "bazel_targets=$TEST_TARGETS" >> $GITHUB_OUTPUT
+                    echo "has_bazel_targets=true" >> $GITHUB_OUTPUT
+                    echo "Bazel test targets: $TEST_TARGETS"
+                  else
+                    echo "bazel_targets=" >> $GITHUB_OUTPUT
+                    echo "has_bazel_targets=false" >> $GITHUB_OUTPUT
+                    echo "No Bazel test targets affected"
+                  fi
+
+    # Bazel tests for bazelified products
+    bazel-tests:
+        needs: [changes, bazel-coordinator]
+        if: needs.changes.outputs.backend == 'true' && needs.bazel-coordinator.outputs.has_bazel_targets == 'true'
+        runs-on: depot-ubuntu-latest
+        timeout-minutes: 30
+        name: Bazel tests (products)
+
+        steps:
+            - uses: actions/checkout@v4
+              with:
+                  fetch-depth: 1
+                  clean: false
+
+            # Infrastructure setup
+            - name: Stop/Start stack with Docker Compose
+              run: |
+                  export CLICKHOUSE_SERVER_IMAGE=clickhouse/clickhouse-server:25.8.11.66
+                  export DOCKER_REGISTRY_PREFIX="us-east1-docker.pkg.dev/posthog-301601/mirror/"
+                  cp posthog/user_scripts/latest_user_defined_function.xml docker/clickhouse/user_defined_function.xml
+                  docker compose -f docker-compose.dev.yml down
+                  docker compose -f docker-compose.dev.yml up -d
+
+            - name: Add Kafka and ClickHouse to /etc/hosts
+              run: echo "127.0.0.1 kafka clickhouse" | sudo tee -a /etc/hosts
+
+            - name: Set up Python
+              uses: actions/setup-python@v5
+              with:
+                  python-version: 3.12.11
+                  token: ${{ secrets.POSTHOG_BOT_PAT }}
+
+            - name: Install uv
+              uses: astral-sh/setup-uv@3259c6206f993105e3a61b142c2d97bf4b9ef83d # v7.1.0
+              with:
+                  enable-cache: true
+                  version: 0.8.19
+
+            - name: Install SAML dependencies
+              run: sudo apt-get update && sudo apt-get install -y libxml2-dev libxmlsec1-dev libxmlsec1-openssl
+
+            - name: Install Python dependencies
+              run: UV_PROJECT_ENVIRONMENT=$pythonLocation uv sync --frozen --dev
+
+            - name: Set up needed files
+              run: |
+                  mkdir -p frontend/dist
+                  touch frontend/dist/index.html frontend/dist/layout.html frontend/dist/exporter.html
+                  ./bin/download-mmdb
+
+            - name: Wait for services
+              run: |
+                  bin/check_kafka_clickhouse_up
+                  bin/check_postgres_up
+
+            - name: Install Bazelisk
+              run: |
+                  curl -LO https://github.com/bazelbuild/bazelisk/releases/download/v1.20.0/bazelisk-linux-amd64
+                  chmod +x bazelisk-linux-amd64
+                  sudo mv bazelisk-linux-amd64 /usr/local/bin/bazel
+
+            - name: Run Bazel tests
+              run: |
+                  echo "Running targets: ${{ needs.bazel-coordinator.outputs.bazel_targets }}"
+                  bazel test --config=ci ${{ needs.bazel-coordinator.outputs.bazel_targets }}
+
     check-migrations:
         needs: [changes]
         if: needs.changes.outputs.backend == 'true'
@@ -378,8 +541,9 @@ jobs:
                   git diff --name-status origin/master..HEAD | grep "A\sposthog/clickhouse/migrations/" | grep -v README | awk '{print $2}' | python manage.py test_ch_migrations_are_safe
 
     django:
-        needs: [changes]
-        if: needs.changes.outputs.backend == 'true'
+        needs: [changes, bazel-coordinator]
+        # Only run legacy pytest if bazel-coordinator says so (legacy code changed)
+        if: needs.changes.outputs.backend == 'true' && needs.bazel-coordinator.outputs.run_legacy == 'true'
         # increase for tmate testing
         timeout-minutes: 30
 
@@ -773,6 +937,7 @@ jobs:
                       --ignore=common/hogvm/python/test \
                       ${{ matrix.person-on-events && '--ignore=posthog/hogql_queries' || '' }} \
                       ${{ matrix.person-on-events && '--ignore=posthog/hogql' || '' }} \
+                      $(for p in products/*/; do [ -f "$p/backend/BUILD.bazel" ] && echo "--ignore=$p"; done) \
                       --splits ${{ matrix.concurrency }} --group ${{ matrix.group }} \
                       --durations=1000 --durations-min=1.0 --store-durations \
                       --splitting-algorithm=duration_based_chunks \
@@ -890,7 +1055,7 @@ jobs:
 
     # Job just to collate the status of the matrix jobs for requiring passing status
     django_tests:
-        needs: [django, check-migrations, async-migrations]
+        needs: [django, check-migrations, async-migrations, bazel-coordinator, bazel-tests]
         name: Django Tests Pass
         runs-on: ubuntu-latest
         if: always()
@@ -913,6 +1078,18 @@ jobs:
                   # Check async migrations - must pass for Django Tests to be green
                   if [[ "${{ needs.async-migrations.result }}" != "success" && "${{ needs.async-migrations.result }}" != "skipped" ]]; then
                     echo "Async migrations tests failed."
+                    exit 1
+                  fi
+
+                  # Check Bazel coordinator - must pass for Django Tests to be green
+                  if [[ "${{ needs.bazel-coordinator.result }}" != "success" && "${{ needs.bazel-coordinator.result }}" != "skipped" ]]; then
+                    echo "Bazel coordinator failed."
+                    exit 1
+                  fi
+
+                  # Check Bazel tests (products) - must pass for Django Tests to be green
+                  if [[ "${{ needs.bazel-tests.result }}" != "success" && "${{ needs.bazel-tests.result }}" != "skipped" ]]; then
+                    echo "Bazel tests failed."
                     exit 1
                   fi
 
