--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -164,6 +164,7 @@ jobs:
             - uses: actions/checkout@v4
               with:
                   fetch-depth: 0
+                  filter: 'blob:none'
 
             - name: Check for bazelified products
               id: check-bazel
