--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -31,3 +31,5 @@ posthog/cdp/templates/** @PostHog/team-workflows
 # And of course modifying this file can bring us problems so let's have the security team own it.
 # This does not affect CODEOWNERS-soft which is used for assigning non-required reviewers and it's much safer to change.
 CODEOWNERS @PostHog/team-security
+.github/scripts/assign-reviewers.js @PostHog/team-security
+.github/workflows/auto-assign-reviewers.yml @PostHog/team-security
