fix(ci): generate requirements_lock.txt before bazel test
Bazel's pip.parse() needs this file. Generate it from uv.lock.

--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -313,6 +313,9 @@ jobs:
                   chmod +x bazelisk-linux-amd64
                   sudo mv bazelisk-linux-amd64 /usr/local/bin/bazel
 
+            - name: Generate requirements_lock.txt for Bazel
+              run: bazel run //:requirements.update
+
             - name: Run Bazel tests
               run: |
                   echo "Running targets: ${{ needs.bazel-coordinator.outputs.bazel_targets }}"
