fix(bazel): generate requirements_lock in coordinator, update platforms
- Generate requirements_lock.txt in bazel-coordinator before
  target-determinator runs (needed for "after" revision query)
- Update platforms from 0.0.10 to 0.0.11 (fixes bazel warning)

--- a/.github/workflows/ci-backend.yml
+++ b/.github/workflows/ci-backend.yml
@@ -191,6 +191,10 @@ jobs:
                   chmod +x target-determinator.linux.amd64
                   sudo mv target-determinator.linux.amd64 /usr/local/bin/target-determinator
 
+            - name: Generate requirements_lock.txt for Bazel
+              if: steps.check-bazel.outputs.has_products == 'true'
+              run: bazel run //:requirements.update
+
             - name: Determine affected targets
               id: determine
               run: |
