feat(bazel): add shared third_party deps bundle
Create //common/bazel:third_party with common pip deps that legacy
code needs. This is the standard pattern for bazel migrations - start
with coarse deps, refine over time as we modularize.

--- a/posthog/BUILD.bazel
+++ b/posthog/BUILD.bazel
@@ -8,6 +8,7 @@ py_library(
     srcs = ["__init__.py"],
     data = [":legacy_srcs"],
     visibility = ["//visibility:public"],
+    deps = ["//common/bazel:third_party"],
 )
 
 exports_files(
