fix(bazel): use srcs instead of data for //posthog:core
data= makes files available at runtime but NOT on PYTHONPATH.
srcs= adds them properly so Python imports work.

Keep legacy_srcs filegroup for target-determinator's //ci:legacy_pytest.

--- a/posthog/BUILD.bazel
+++ b/posthog/BUILD.bazel
@@ -5,8 +5,14 @@ load("@rules_python//python:defs.bzl", "py_library")
 # and to trigger reruns when legacy code changes.
 py_library(
     name = "core",
-    srcs = ["__init__.py"],
-    data = [":legacy_srcs"],
+    srcs = glob(
+        ["**/*.py"],
+        exclude = [
+            "**/test_*.py",
+            "**/*_test.py",
+            "**/tests/**",
+        ],
+    ),
     visibility = ["//visibility:public"],
     deps = ["//common/bazel:third_party"],
 )
