--- a/products/visual_review/backend/tests/BUILD.bazel
+++ b/products/visual_review/backend/tests/BUILD.bazel
@@ -1,40 +1,13 @@
 load("@aspect_rules_py//py:defs.bzl", "py_test")
 
-# Unit tests: depend on own :impl + other products' :contract only
-# These run when own code changes, NOT when other products' impl changes
-# Note: :impl depends on //posthog:core and //products:non_isolated,
-# so tests automatically rerun when legacy code changes.
+# All tests for visual_review product
+# Combined into single target to avoid aspect_rules_py .venv.pth conflicts
 py_test(
-    name = "tests_unit",
-    srcs = [
-        "test_models.py",
-        "test_logic.py",
-        "test_api.py",
-    ],
-    data = [
-        "//products:conftest.py",
-    ],
+    name = "tests",
+    srcs = glob(["test_*.py"]),
     pytest_main = True,
     deps = [
         "//products/visual_review/backend:impl",
-        "@pypi//django",
-        "@pypi//pytest",
-    ],
-)
-
-# Integration tests: depend on other products' :impl, DB, external services
-# These run when any dependent :impl changes
-py_test(
-    name = "tests_integration",
-    srcs = [
-        "test_presentation.py",
-        "test_tasks.py",
-    ],
-    data = [
-        "//products:conftest.py",
-    ],
-    pytest_main = True,
-    deps = [
         "//products/visual_review/backend:presentation",
         "//products/visual_review/backend:tasks",
         "@pypi//celery",
