--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -1,7 +1,13 @@
 name: 'Handle stale PRs'
 on:
+    workflow_dispatch:
     schedule:
         - cron: '30 7 * * 1-5'
+
+permissions:
+    contents: read
+    issues: write
+    pull-requests: write
 
 jobs:
     stale:
@@ -25,4 +31,3 @@ jobs:
                   remove-pr-stale-when-updated: true
                   exempt-pr-labels: 'waiting'
                   operations-per-run: 250
-                  repo-token: ${{ secrets.POSTHOG_BOT_PAT }}
