--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -27,16 +27,16 @@ jobs:
     automerge:
         name: Automerge if requested
         runs-on: ubuntu-24.04
-        env:
-            IS_POSTHOG_BOT_AVAILABLE: ${{ secrets.POSTHOG_BOT_PAT != '' }}
+        permissions:
+            contents: write
+            pull-requests: write
         steps:
             # must have an id so subsequent steps can use the output
             - id: automergeStep
               name: Automerge
-              if: env.IS_POSTHOG_BOT_AVAILABLE == 'true'
               uses: pascalgn/automerge-action@d1203c0bf94a827b991e5de69d662e9163304fa0 # v0.16.3
               env:
-                  GITHUB_TOKEN: ${{ secrets.POSTHOG_BOT_PAT }}
+                  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
             # the automerge documentation claims it adds these outputs but we don't get them
             # maybe because it was a fake PR 🤷
