fix(bazel): add third-party deps and pytest config for isolated tests
- Add args to restrict pytest collection to test directory only
- Add env vars for Django settings
- Add many third-party deps needed by posthog.settings import chain
- Add pytest-django for proper Django setup

--- a/common/bazel/BUILD.bazel
+++ b/common/bazel/BUILD.bazel
@@ -7,10 +7,39 @@ py_library(
     name = "third_party",
     visibility = ["//visibility:public"],
     deps = [
+        "@pypi//asgiref",
+        "@pypi//cachetools",
         "@pypi//celery",
+        "@pypi//cryptography",
+        "@pypi//dj_database_url",
         "@pypi//django",
+        "@pypi//django_cors_headers",
+        "@pypi//django_deprecate_fields",
         "@pypi//django_structlog",
         "@pypi//djangorestframework",
+        "@pypi//drf_spectacular",
+        "@pypi//lzstring",
+        "@pypi//orjson",
+        "@pypi//posthoganalytics",
+        "@pypi//prometheus_client",
+        "@pypi//psycopg",
+        "@pypi//pydantic",
+        "@pypi//python_dateutil",
+        "@pypi//pytz",
+        "@pypi//redis",
+        "@pypi//semantic_version",
+        "@pypi//statshog",
         "@pypi//structlog",
+        "@pypi//user_agents",
+        "@pypi//boto3",
+        "@pypi//clickhouse_connect",
+        "@pypi//clickhouse_driver",
+        "@pypi//clickhouse_pool",
+        "@pypi//infi_clickhouse_orm",
+        "@pypi//kafka_python",
+        "@pypi//opentelemetry_api",
+        "@pypi//opentelemetry_sdk",
+        "@pypi//temporalio",
+        "@pypi//whitenoise",
     ],
 )
