--- a/products/visual_review/backend/tests/BUILD.bazel
+++ b/products/visual_review/backend/tests/BUILD.bazel
@@ -5,6 +5,18 @@ load("@aspect_rules_py//py:defs.bzl", "py_test")
 py_test(
     name = "tests",
     srcs = glob(["test_*.py"]),
+    args = [
+        # Only collect from this test directory, ignore everything else
+        "products/visual_review/backend/tests/",
+        "--ignore=posthog/",
+        "--ignore=ee/",
+        "--ignore=products/data_warehouse/",
+        "--ignore=products/tasks/",
+    ],
+    env = {
+        "DJANGO_SETTINGS_MODULE": "posthog.settings",
+        "DEBUG": "1",
+    },
     pytest_main = True,
     deps = [
         "//products/visual_review/backend:impl",
@@ -14,5 +26,6 @@ py_test(
         "@pypi//django",
         "@pypi//djangorestframework",
         "@pypi//pytest",
+        "@pypi//pytest_django",
     ],
 )
